[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
description = "A sample test package"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "eagle", email = "eagle@42.fr"},
]
requires-python = ">=3.10"
classifiers = []

[project.urls]
"Homepage" = "https://github.com/eagle/ft_package"
